# sunrise-xray

./: Cargo.toml  Cross.toml  LICENSE  README.md  TODO.md  USAGE.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  deploy-guide.md  dev-guide.md
scripts/: install.sh
src/: commands.rs  config.rs  embedded.rs  fetch.rs  main.rs  paths.rs  util.rs  xray.rs
