[package]
name = "sunrise-xray"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "fs", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
url = "2"
percent-encoding = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
